[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes_and_scripts/screen__login/login.gd" type="Script" id=2]
[ext_resource path="res://scenes_and_scripts/screen__login/assets_m_skin/base01mdpi.png" type="Texture" id=4]
[ext_resource path="res://scenes_and_scripts/screen__login/assets_m_skin/LOGIN_.jpg" type="Texture" id=5]
[ext_resource path="res://scenes_and_scripts/m_skin_base/m_skin_base.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes_and_scripts/screen__login/assets_m_skin/botonLOGINmdpi.png" type="Texture" id=7]
[ext_resource path="res://scenes_and_scripts/screen__login/assets_m_skin/bottonPRESSEDmdpi.png" type="Texture" id=8]
[ext_resource path="res://scenes_and_scripts/screen__register/assets_m_skin/divisionmdpi.png" type="Texture" id=9]
[ext_resource path="res://scenes_and_scripts/screen__login/assets_m_skin/crearNEW_HOVERmdpi.png" type="Texture" id=10]
[ext_resource path="res://scenes_and_scripts/screen__login/assets_m_skin/crearNEWmdpi.png" type="Texture" id=11]
[ext_resource path="res://assets/themes/fonts/line_edit.tres" type="DynamicFont" id=12]
[ext_resource path="res://assets/themes/matrix_background.tres" type="Theme" id=13]

[node name="Login" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="m_skin_base" parent="." instance=ExtResource( 6 )]
position = Vector2( 40, 32 )

[node name="CenterContainer" type="Control" parent="."]
margin_left = 101.0
margin_top = 568.0
margin_right = 973.0
margin_bottom = 1325.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="LoginBackground" type="TextureRect" parent="CenterContainer"]
margin_left = -23.0
margin_top = 3.0
margin_right = 878.0
margin_bottom = 768.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 3

[node name="UserNameLabel" type="Label" parent="CenterContainer"]
margin_left = 75.0
margin_top = 108.0
margin_right = 308.0
margin_bottom = 160.0
custom_fonts/font = ExtResource( 12 )
text = "Nombre"

[node name="UserNameText" type="LineEdit" parent="CenterContainer"]
margin_left = 71.0
margin_top = 183.0
margin_right = 785.0
margin_bottom = 276.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
theme = ExtResource( 13 )
placeholder_text = "NUEVO JUGADOR"
caret_blink_speed = 0.5

[node name="PasswordLabel" type="Label" parent="CenterContainer"]
margin_left = 72.0
margin_top = 343.0
margin_right = 386.0
margin_bottom = 408.0
custom_fonts/font = ExtResource( 12 )
text = "CLAVE"

[node name="PasswordText" type="LineEdit" parent="CenterContainer"]
margin_left = 65.0
margin_top = 413.0
margin_right = 791.0
margin_bottom = 506.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
theme = ExtResource( 13 )
placeholder_text = "NUEVA CLAVE"
placeholder_alpha = 0.388
caret_blink = true
caret_blink_speed = 0.5

[node name="Divisionmdpi" type="Sprite" parent="CenterContainer"]
position = Vector2( 429, 524 )
texture = ExtResource( 9 )

[node name="LoginButton" type="TextureButton" parent="CenterContainer"]
margin_left = 160.0
margin_top = 573.0
margin_right = 915.0
margin_bottom = 732.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )

[node name="LoginButtonLabel" type="Label" parent="CenterContainer"]
margin_left = 361.0
margin_top = 632.0
margin_right = 594.0
margin_bottom = 684.0
custom_fonts/font = ExtResource( 12 )
text = "LOGIN"
align = 1
valign = 1

[node name="RegisterButton" type="TextureButton" parent="."]
margin_left = 179.0
margin_top = 1409.0
margin_right = 870.0
margin_bottom = 1568.0
texture_normal = ExtResource( 11 )
texture_hover = ExtResource( 10 )
expand = true
stretch_mode = 2

[node name="RegisterButtonLabel" type="Label" parent="."]
margin_left = 376.0
margin_top = 1464.0
margin_right = 736.0
margin_bottom = 1529.0
custom_fonts/font = ExtResource( 12 )
text = "REGISTRARSE"
align = 1
valign = 1
autowrap = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Login" type="Sprite" parent="."]
visible = false
position = Vector2( 540.25, 959 )
scale = Vector2( 1.47986, 1.49688 )
texture = ExtResource( 5 )

[connection signal="pressed" from="CenterContainer/LoginButton" to="." method="_on_LoginButton_pressed"]
[connection signal="pressed" from="RegisterButton" to="." method="_on_RegisterButton_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
